// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomerAlsoViewedContainer /> renders correctly with data 1`] = `
<div
  className="row:bg-lighter "
>
  <div
    className="row:carousel"
  >
    <h3
      className="heading -black -large"
    >
      Customers Also Viewed
    </h3>
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="mocked-carousel"
      >
        <div
          className="card"
          data-testid="card"
        >
          <img
            alt="img"
            className="card-image"
            data-testid="card-image"
            onError={[Function]}
            src="/vehiclePlaceholder.jpg"
          />
          <div
            className="title"
          >
            <a
              className="heading link -black -large"
              data-menu={null}
              data-testid="router-link"
              href="/car-leasing/null/null/name/10-ecoBoost-125-st-line-nav-5dr"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              manufacturerName rangeNam...
            </a>
            <span
              className="heading -dark -small"
              data-testid="card-description"
            >
              derivativeName
            </span>
            <div
              className="rating -regular -orange"
            >
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7ZM274.63,347.82,256,334.49V134.39l26,78.91,7.24,22H394.63l-67.32,47.2-19.69,13.81,7.78,22.75,26.26,76.75Z"
                    />
                  </svg>
                </i>
              </span>
              <span
                className="text -regular -dark"
              >
                4.5
              </span>
            </div>
          </div>
          <div
            className="features"
          >
            <div>
              <i
                className="icon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <title>
                    ionicons-v5-b
                  </title>
                  <path
                    d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeMiterlimit": 10,
                        "strokeWidth": 32,
                      }
                    }
                  />
                  <path
                    d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeLinecap": "round",
                        "strokeLinejoin": "round",
                        "strokeWidth": 32,
                      }
                    }
                  />
                  <polyline
                    points="135.87 256 159.46 232.4 184.13 256"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeLinecap": "round",
                        "strokeLinejoin": "round",
                        "strokeWidth": 32,
                      }
                    }
                  />
                  <polyline
                    points="376.13 256 352.54 279.6 327.87 256"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeLinecap": "round",
                        "strokeLinejoin": "round",
                        "strokeWidth": 32,
                      }
                    }
                  />
                </svg>
              </i>
              <span
                className="text -xsmall -dark"
              >
                
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                55
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              data-testid="customer-also-view"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                View Offer
              </div>
            </button>
          </div>
          <div
            className="card-footer"
          >
            <button
              className="-dark -xsmall -clear"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                <i
                  className="icon -dark"
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 512 512"
                    width="1rem"
                  >
                    <path
                      d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
                      style={
                        Object {
                          "fill": "var(--class-color)",
                        }
                      }
                    />
                    <path
                      clipRule="evenodd"
                      d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
                      fillRule="evenodd"
                      style={
                        Object {
                          "fill": "var(--class-color)",
                        }
                      }
                    />
                    <path
                      clipRule="evenodd"
                      d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
                      fillRule="evenodd"
                      style={
                        Object {
                          "fill": "var(--class-color)",
                        }
                      }
                    />
                  </svg>
                </i>
                Compare
              </div>
            </button>
            <button
              className="-dark -xsmall -clear"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                <i
                  className="icon -dark"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-f
                    </title>
                    <path
                      d="M256,448l-9-6c-42.78-28.57-96.91-60.86-137-108.32-42.25-50-62.52-101.35-62-157C48.63,114.54,98.46,64,159.08,64c48.11,0,80.1,28,96.92,48.21C272.82,92,304.81,64,352.92,64,413.54,64,463.37,114.54,464,176.65c.56,55.68-19.71,107-62,157C361.91,381.14,307.78,413.43,265,442Z"
                    />
                  </svg>
                </i>
                 Wishlist
              </div>
            </button>
          </div>
        </div>
        <div
          className="card"
          data-testid="card"
        >
          <img
            alt="img"
            className="card-image"
            data-testid="card-image"
            onError={[Function]}
            src="/vehiclePlaceholder.jpg"
          />
          <div
            className="title"
          >
            <a
              className="heading link -black -large"
              data-menu={null}
              data-testid="router-link"
              href="/car-leasing/null/null/name/10-ecoBoost-125-st-line-nav-5dr"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              manufacturerName rangeNam...
            </a>
            <span
              className="heading -dark -small"
              data-testid="card-description"
            >
              derivativeName
            </span>
            <div
              className="rating -regular -orange"
            >
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
                    />
                  </svg>
                </i>
              </span>
              <span>
                <i
                  className="icon -orange"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-e
                    </title>
                    <path
                      d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7ZM274.63,347.82,256,334.49V134.39l26,78.91,7.24,22H394.63l-67.32,47.2-19.69,13.81,7.78,22.75,26.26,76.75Z"
                    />
                  </svg>
                </i>
              </span>
              <span
                className="text -regular -dark"
              >
                4.5
              </span>
            </div>
          </div>
          <div
            className="features"
          >
            <div>
              <i
                className="icon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <title>
                    ionicons-v5-b
                  </title>
                  <path
                    d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeMiterlimit": 10,
                        "strokeWidth": 32,
                      }
                    }
                  />
                  <path
                    d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeLinecap": "round",
                        "strokeLinejoin": "round",
                        "strokeWidth": 32,
                      }
                    }
                  />
                  <polyline
                    points="135.87 256 159.46 232.4 184.13 256"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeLinecap": "round",
                        "strokeLinejoin": "round",
                        "strokeWidth": 32,
                      }
                    }
                  />
                  <polyline
                    points="376.13 256 352.54 279.6 327.87 256"
                    style={
                      Object {
                        "fill": "none",
                        "stroke": "var(--class-color)",
                        "strokeLinecap": "round",
                        "strokeLinejoin": "round",
                        "strokeWidth": 32,
                      }
                    }
                  />
                </svg>
              </i>
              <span
                className="text -xsmall -dark"
              >
                
              </span>
            </div>
          </div>
          <div
            className="-flex-h"
          >
            <div
              className="price -large -black"
            >
              <span
                className="price--sub"
              >
                £
              </span>
              <span
                className="price--pounds"
              >
                55
              </span>
              <span
                className="price--sub"
              >
                .
                00
              </span>
              <div
                className="price--label"
              >
                Per Month Inc.VAT
              </div>
            </div>
            <button
              className="button -teal -regular -solid"
              data-testid="customer-also-view"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                View Offer
              </div>
            </button>
          </div>
          <div
            className="card-footer"
          >
            <button
              className="-dark -xsmall -clear"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                <i
                  className="icon -dark"
                >
                  <svg
                    fill="none"
                    height="1rem"
                    viewBox="0 0 512 512"
                    width="1rem"
                  >
                    <path
                      d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
                      style={
                        Object {
                          "fill": "var(--class-color)",
                        }
                      }
                    />
                    <path
                      clipRule="evenodd"
                      d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
                      fillRule="evenodd"
                      style={
                        Object {
                          "fill": "var(--class-color)",
                        }
                      }
                    />
                    <path
                      clipRule="evenodd"
                      d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
                      fillRule="evenodd"
                      style={
                        Object {
                          "fill": "var(--class-color)",
                        }
                      }
                    />
                  </svg>
                </i>
                Compare
              </div>
            </button>
            <button
              className="-dark -xsmall -clear"
              onClick={[Function]}
            >
              <div
                className="button--inner"
              >
                <i
                  className="icon -dark"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <title>
                      ionicons-v5-f
                    </title>
                    <path
                      d="M256,448l-9-6c-42.78-28.57-96.91-60.86-137-108.32-42.25-50-62.52-101.35-62-157C48.63,114.54,98.46,64,159.08,64c48.11,0,80.1,28,96.92,48.21C272.82,92,304.81,64,352.92,64,413.54,64,463.37,114.54,464,176.65c.56,55.68-19.71,107-62,157C361.91,381.14,307.78,413.43,265,442Z"
                    />
                  </svg>
                </i>
                 Wishlist
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomerAlsoViewedContainer /> renders correctly with empty data 1`] = `null`;

exports[`<CustomerAlsoViewedContainer /> renders correctly with error 1`] = `
<div
  className="pdp--content"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "minHeight": "10rem",
    }
  }
>
  message
</div>
`;

exports[`<CustomerAlsoViewedContainer /> renders correctly with loading 1`] = `
<div
  className="pdp--content"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "minHeight": "10rem",
    }
  }
>
  <div
    className="loading -xlarge"
  >
    <svg
      className="loading--svg"
      viewBox="-75 -75 150 150"
    >
      <circle
        className="loading--stroke"
        cx="0"
        cy="0"
        r="37.5"
      />
    </svg>
  </div>
</div>
`;
